@@ -93,7 +93,8 @@ public class IncludedLibrariesStructureListState
 			IncludedLibrary includeLibrary = (IncludedLibrary) struct;
 
 			if ( handler.markLineNumber )
-				handler.module.addLineNo( struct, new Integer( lineNumber ) );
+				handler.module
+						.addLineNo( struct, Integer.valueOf( lineNumber ) );
 
 			// Use file name without path and suffix as default name space.
 
